# disco-magnesium

./: .gitignore  README.md  disco-magnesium.service  gunicorn.conf.py  pyproject.toml
data/: dialogue_metadata.toml  script.lua
disco_magnesium/: __main__.py  config.py
disco_magnesium/api/: app.py  difficulty.py  reader.py  routes.py  script_engine.py
disco_magnesium/api/models/: responses.py  rolls.py  state.py
disco_magnesium/importer/: cache.py  fields.py  models.py  source.py
disco_magnesium/model/: actor.py  conversation.py  dialogue.py  item.py  node.py  skill.py  variable.py
static/: index.html  script.js  style.css
