[tool.poetry]
name = "disco-magnesium"
version = "0.1.0"
description = "A web tool for browsing Disco Elysium conversations."
authors = ["Lyrositor <gagne.marc@gmail.com>"]
license = "CC0"
readme = "README.md"
packages = [{include = "disco_magnesium"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
orjson = "^3.8.6"
pydantic = "^1.10.5"
fastapi = "^0.92.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
lupa = "^1.14.1"
toml = "^0.10.2"
sentry-sdk = {extras = ["fastapi"], version = "^1.16.0"}
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
